Fix layout bugs

--- a/stylesheets/othree.css
+++ b/stylesheets/othree.css
@@ -113,9 +113,13 @@ blockquote {
   margin: 0 0 20px;
   border-left: 5px solid #eee;
 }
+blockquote ol,
+blockquote ul {
+  margin-left: 1em;
+}
 
 #container {
-  padding-top: 60px;
+  padding: 60px 32px 0;
 }
 
 #container h1 {
@@ -123,7 +127,6 @@ blockquote {
   font-size: 46px;
   margin-top: 10px;
   margin-bottom: 1em;
-  padding-left: 30px;
 }
 
 h1 a,
@@ -145,13 +148,23 @@ h1 a:hover {
   text-shadow: rgba(0,0,0,0.7) 10px 10px 10px;
 }
 
+.layout {
+  gap: 32px;
+  gap: 0 32px;
+}
+
+@media screen and (max-width: 1024px) {
+  .layout {
+    flex-direction: column;
+  }
+}
+
 #page-info {
   display: none;
 }
 
 #content {
-  padding-left: 30px;
-  padding-right: 15px;
+  flex: 3;
 }
 
 #content article {
@@ -198,6 +211,10 @@ h1 a:hover {
 #content ol,
 #content ul {
   margin: 1.8em 0;
+}
+#content blockquote ol,
+#content blockquote ul {
+  margin-left: 1em;
 }
 #content p,
 #content ol li,
@@ -255,6 +272,15 @@ h1 a:hover {
   line-height: 1.6;
   font-weight: bold;
 }
+#content hr:last-child {
+  display: none;
+}
+@media screen and (max-width: 1024px) {
+  #content hr:last-child {
+    display: block;
+  }
+}
+
 
 /*bootstrap*/
 .thumbnail {
@@ -264,7 +290,7 @@ h1 a:hover {
   padding: 4px;
   line-height: 20px;
   border: 1px solid #ddd;
-  -webkit-border-radius: 4px;
+  -webkit-border-radius: 6px;
   -moz-border-radius: 4px;
   border-radius: 4px;
   -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.055);
@@ -335,8 +361,9 @@ border-left: 1px solid #08c;
 
 #prev-link {
   display: block;
-  margin: 1em 0;
+  margin: 1.2em 0;
   font-size: 24px;
+  line-height: 1;
 }
 
 aside [role=contentinfo] .pn {
@@ -372,7 +399,7 @@ aside [role=contentinfo] strong {
 }
 
 #nav-search {
-  margin-top: 5px;
+  margin-top: 6px;
 }
 
 #nav-search input,
@@ -387,6 +414,7 @@ aside [role=contentinfo] strong {
   border-radius: 15px;
   background-color: #fff;
   border: 1px solid #ccc;
+  border-radius: 6px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
   -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
   box-shadow: inset 0 1px 1px rgba(0,0,0,0.075);
@@ -407,10 +435,22 @@ aside [role=contentinfo] strong {
   box-shadow: 0 0 6px #f8b9b7;
 }
 
+@media (prefers-color-scheme: dark) {
+  #nav-search input,
+  #search-form input {
+    color: #fff;
+    background: #222;
+  }
+}
+
 aside {
+  flex: 1;
   font-size: 14px;
-  padding-left: 15px;
-  padding-right: 30px;
+}
+@media screen and (max-width: 1024px) {
+  aside > hr:first-of-type {
+    display: none;
+  }
 }
 aside h2 {
   display: none;
@@ -507,8 +547,6 @@ footer h2.pure-u-1 {
 }
 footer .pure-u-1 {
   box-sizing: border-box;
-  padding-left: 30px;
-  padding-left: 30px;
 }
 footer a {
   line-height: 2;
@@ -546,8 +584,11 @@ footer a:last-of-type {
 }
 
 nav {
+  box-sizing: border-box;
   position: fixed;
   top: 0;
+  padding-left: 32px;
+  padding-right: 32px;
   width: 100%;
   /*bootstrap*/
   min-height: 40px;
@@ -571,8 +612,6 @@ nav {
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 30px;
-  padding-right: 30px;
 }
 
 #nav-search {
@@ -581,13 +620,14 @@ nav {
   -o-transition: opacity 1s ease;
   transition: opacity 1s ease;
   float: left;
+  margin-top: 6px;
 }
 nav .pure-menu {
   float: right;
   width: auto;
 }
 nav .pure-menu-item {
-  padding: 10px 15px 10px;
+  padding: 10px 16px 10px;
   color: #777;
   text-decoration: none;
   text-shadow: 0 1px 0 #fff;
@@ -606,6 +646,7 @@ nav .pure-menu-selected {
   box-shadow: inset 0 3px 8px rgba(0,0,0,0.125);
 }
 nav .pure-menu-item.icon.github {
+  margin-right: -16px;
   mix-blend-mode: difference;
 }
 
